2017-11-20  Mario Sanchez Prada  <mario@endlessm.com>

        [GTK] New API to add, retrieve and delete cookies via WebKitCookieManager
        https://bugs.webkit.org/show_bug.cgi?id=177932

        Reviewed by Carlos Garcia Campos.

        Added new API to WebKitCookieManager to add, retrieve and delete complete
        cookies into/out-of a running session, and updated documentation sections.

        * UIProcess/API/glib/WebKitCookieManager.cpp:
        (webkit_cookie_manager_add_cookie): New function.
        (webkit_cookie_manager_add_cookie_finish): Ditto.
        (webkit_cookie_manager_get_cookies): Ditto.
        (webkit_cookie_manager_get_cookies_finish): Ditto.
        (webkit_cookie_manager_delete_cookie): Ditto.
        (webkit_cookie_manager_delete_cookie_finish): Ditto.
        * UIProcess/API/gtk/WebKitCookieManager.h: Added new functions.
        * UIProcess/API/wpe/WebKitCookieManager.h: Ditto.
        * UIProcess/API/gtk/docs/webkit2gtk-4.0-sections.txt: Ditto.

2017-11-20  Carlos Garcia Campos  <cgarcia@igalia.com>

        [WPE] webkit_web_view_new() should enable specifying wpe_view_backend object
        https://bugs.webkit.org/show_bug.cgi?id=178655

        Reviewed by Michael Catanzaro.

        Update all WebKitWebView constructors to receive a WebKitWebViewBackend as argument. It's now required to
        provide a backend to create a web view, but it can be NULL to use the default one. WebKitWebViewBackend is a
        boxed type wrapping a struct wpe_view_backend* used as construct only property of WebKitWebView. The view always
        takes the ownership of the WebKitWebViewBackend which owns the struct wpe_view_backend*. An optional
        GDestroyNotify and user data pointer can be passed to the WebKitWebViewBackend constructor to provide a custom
        deleter for the backend. In the C API the struct wpe_view_backend* is also mandatory now, but it can't be NULL
        and it's owned by the caller, not the view.
