@@ -1,3 +1,12 @@
+2017-11-20  Don Olmstead  <don.olmstead@sony.com>
+
+        Add declspec within WebKit API
+        https://bugs.webkit.org/show_bug.cgi?id=179893
+
+        Reviewed by Darin Adler.
+
+        * Shared/API/c/WKDeclarationSpecifiers.h:
+
 2017-11-20  Mario Sanchez Prada  <mario@endlessm.com>
 
         [GTK] New API to add, retrieve and delete cookies via WebKitCookieManager
